fix: delay transition of collapse animation  to fit to the maquette

--- a/projet_6_kasa/src/sass/components/_collapse.component.scss
+++ b/projet_6_kasa/src/sass/components/_collapse.component.scss
@@ -56,7 +56,7 @@ $collapse-background-color: #f6f6f6;
         // transform: translateY(-100%);
         max-height: 0;
         overflow: hidden;
-        transition: max-height 0.5s ease-in-out; 
+        transition: max-height 1s ease-in-out; 
 
         // transition: transform 0.3s ease-in-out;
         &--expanded {
